--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
     
       获取dom元素的方法：
           this.$refs是一个对象集合，放的全部是标记好元素，在标签写一个ref="标记"
+
+
+   Vue的组件化：
+      1.全局组件：Vue.component（）注册一个组件，
+      ! 使用构造器 Vue.extend（）； var item=Vue.extend()
+         
     </script>
 </body>
 </html>
