--- a/status/status.html
+++ b/status/status.html
@@ -16,7 +16,10 @@
 
 原文：https://segmentfault.com/a/1190000014804826
 
-vue-cli是构建vue单页应用的脚手架，输入一串指定的命令行从而自动生成vue.js+wepack的项目模板。这其中webpack发挥了很大的作用，它使得我们的代码模块化，引入一些插件帮我们完善功能可以将文件打包压缩，图片转base64等。后期对项目的配置使得我们对于脚手架自动生成的代码的理解更为重要，接下来我将基于webpack3.6.0版本结合文档将文件各个击破，纯干料。
+vue-cli是构建vue单页应用的脚手架，输入一串指定的命令行从而自动生成vue.js+wepack的项目模板。这其中webpack发挥了很大的作用，
+它使得我们的代码模块化，引入一些插件帮我们完善功能可以将文件打包压缩，
+图片转base64等。
+后期对项目的配置使得我们对于脚手架自动生成的代码的理解更为重要，接下来我将基于webpack3.6.0版本结合文档将文件各个击破，纯干料。
 重点章节点击查看：package.json；config/index.js；webpack.base.conf.js；webpack.dev.conf.js；webpack.prod.conf.js
 二、主体结构
 
